syntax = "proto3";
option java_package = "com.game.protocol";
option java_outer_classname = "Protocol";


message registerReq{
    string loginId =1;
    string password = 2;
}

message registerRes{
    int32 code = 1;
}

message loginReq{
    string loginId = 1;
    string password = 2;
}

message loginRes{
    string token = 1;
    int32 id = 2;
}





